# ppe

./: .dir-locals.el  .gitignore  cores.sh  gpu_cores.sh
Microbenchmakrs/: Makefile  add_benchmark.c  add_benchmark.cpp  benchmarks.cpp  microbenchmark
Opencl_Optimization_Example/: Opencl_Optimization_Example.sln
Opencl_Optimization_Example/1_c/: 1_c.vcxproj  1_c.vcxproj.filters  main_c_1.cpp
Opencl_Optimization_Example/1_opencl/: 1_opencl.vcxproj  1_opencl.vcxproj.filters  kernel.cl  main_opencl_1.cpp  parameters.h
Opencl_Optimization_Example/4_no_overhead/: 4_no_overhead.vcxproj  4_no_overhead.vcxproj.filters  main_opencl_4_profile_nooverhead.cpp  opencl_utils.h  util.h
Opencl_Optimization_Example/6_range_kernel/: 6_range_kernel.vcxproj  6_range_kernel.vcxproj.filters  main_opencl_6_range_kernel.cpp  opencl_utils.cpp
Opencl_Optimization_Example/7_range_coalesced/: 7_range_coalesced.vcxproj  7_range_coalesced.vcxproj.filters  main_opencl_7_range_coalesced.cpp
final/: final.tex
final/presentation/: discussion.tex  motivation.tex  results.tex  (+3 more)
lab2/: report.tex
lab3/: report.tex
video_compression/c_encoder/: CMakeLists.txt  ppe.psess  ppe.sln  ppe200914.vspx
video_compression/c_encoder/ppe/: .clang-format  Makefile  cl_stat  cmd_args.c  cmd_args.cpp  cmd_args.h  config.h  cores.sh  custom_types.cpp  custom_types.h  dct8x8_block.cpp  dct8x8_block.h  gettimeofday.cpp  gettimeofday.h  gpu_cores.sh  kernel.cl  main.cpp  opt_openacc.c  opt_openacc.h  opt_opencl.c  opt_opencl.h  ppe.vcxproj  ppe.vcxproj.filters  test_setup.h  timer.h  xml_aux.cpp  xml_aux.h
(+35 files in other folders)
